--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Help</title>
+    <title>About</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-<h1>{{title}}</h1>
-<p>{{message}}</p>
+{{>header}}
+<img src="/img/hugo-jehanne-LOHVrTsdvzY-unsplash.jpg" alt="img">
+{{>footer}}
 </body>
 </html>
