--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{title}}</title>
+    <title>Help</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 <body>
-<h1>{{title}}</h1>
-<p>Created by {{name}} </p>
+{{>header}}
+<p>{{message}}</p>
+{{>footer}}
 </body>
 </html>
