--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
 </head>
 <body>
-<h1>{{title}}</h1>
-<img src="/img/hugo-jehanne-LOHVrTsdvzY-unsplash.jpg" alt="img">
+{{>header}}
+    <h2>index</h2>
+{{>footer}}
 </body>
 </html>
