added styling and requests for apis

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-{{>header}}
-<img src="/img/hugo-jehanne-LOHVrTsdvzY-unsplash.jpg" alt="img">
+<div class="main-content">
+    {{>header}}
+    <img class="portrait" src="/img/hugo-jehanne-LOHVrTsdvzY-unsplash.jpg" alt="img">
+</div>
 {{>footer}}
 </body>
 </html>
