--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -5,12 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <style type="text/css" rel="stylesheet" href="../css/styles.css"></style>
+    <link rel="stylesheet" href="../css/styles.css">
     <title>404</title>
 </head>
 <body>
-{{>header}}
-<p>{{message}}</p>
+<div class="main-content">
+    {{>header}}
+    <p>{{message}}</p>
+</div>
 {{>footer}}
 </body>
 </html>
