--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Help</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-{{>header}}
-<p>{{message}}</p>
+<div class="main-content">
+    {{>header}}
+    <p>{{message}}</p>
+</div>
 {{>footer}}
 </body>
 </html>
