--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,9 +7,11 @@
     <script src="/js/app.js"></script>
 </head>
 <body>
-{{>header}}
-    <h2>index</h2>
-<p>{{}}</p>
+<div class="main-content">
+    {{>header}}
+    <h2>{{title}}</h2>
+    <p>{{message}}</p>
+</div>
 {{>footer}}
 </body>
 </html>
