--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 <body>
 <div class="main-content">
     {{>header}}
-    <h2>{{title}}</h2>
     <p>{{message}}</p>
+    <form>
+        <input placeholder="Location"/>
+        <button type="submit">Search</button>
+    </form>
 </div>
 {{>footer}}
+<script src="/js/app.js"></script>
 </body>
 </html>
