added paragraph to about page.

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
 <div class="main-content">
     {{>header}}
+    <p>This app was created by me Fred Gerner, and uses mapbox.com and weatherstack.com api's</p>
     <img class="portrait" src="/img/hugo-jehanne-LOHVrTsdvzY-unsplash.jpg" alt="img">
 </div>
 {{>footer}}
